# ur-isaacsim

./: .gitignore  HARDWARE.md  HISTORY.md  LEARNING.md  README.md  SETUP.md  qna.md  to_do.md  ur16e.repos
ur_bringup/: CMakeLists.txt  README.md  package.xml
ur_bringup/config/: robotiq_2f85_real_controllers.yaml  ur16e_controllers.yaml
ur_bringup/config/common/: ur16e_2f85_controllers.yaml
ur_bringup/config/ur16e/: ur16e_controllers.yaml
ur_bringup/config/ur16e_2f85_d405/: cumotion_nvblox.rviz  d405_real.yaml  nvblox_cumotion.yaml  sensors_3d.yaml
ur_bringup/cumotion/: README.md  gen_xrdf.py  ur16e_2f85.urdf  ur16e_2f85.xrdf
ur_bringup/isaac/: README.md  build_ur16e_2f85.py  convert_bracket.py  convert_dae_to_usd.py  octomap_demo.py  ur16e_isaac_ros2.py
ur_bringup/isaac/assets/: picknik_camera_adapter.usd  ur_to_robotiq_coupling.usd
ur_bringup/isaac/common/: build_ur16e_2f85.py  moveit_plan_execute_demo.py  reset_pose.py  ur16e_isaac_ros2.py
ur_bringup/isaac/ur16e_2f85/: gripper_demo.py  selfcollision_demo.py
ur_bringup/isaac/ur16e_2f85_d405/: convert_bracket.py  nvblox_obstacle_demo.py
ur_bringup/launch/: robotiq_2f85_real.launch.py  ur16e.launch.py  ur16e_2f85.launch.py  ur16e_2f85_d405.launch.py  ur16e_2f85_d405_moveit.launch.py  ur16e_2f85_moveit.launch.py  ur16e_2f85_real.launch.py
ur_bringup/launch/ur16e/: ur16e.launch.py  ur16e_moveit.launch.py
ur_bringup/srdf/: ur16e_2f85.srdf.xacro
ur_bringup/urdf/: realsense_d405_macro.xacro  robotiq_2f85_real.urdf.xacro  ur16e_2f85_d405_sim.urdf.xacro  ur16e_2f85_sim.ros2_control.xacro  ur16e_2f85_sim.urdf.xacro  ur16e_sim.urdf.xacro
(+18 files in other folders)
